0.8.7
 - Bugfixes:
   - Search for missing datasets was falsely extended to directories
     not chosen by the user
   - Add recording date/time tooltip in the analysis tab to avoid
     ambiguities (#223)
 - Automated release to PyPI with appveyor
 - Begin migration of docs to sphinx/readthedocs.org
0.8.6
 - Refactoring:
   - Use pathlib instead of os.path for
     - All session handling/conversion tasks
     - Configuration file management
     - Measurement/Analysis management
   - Support all changes to dclab.definitions (dclab 0.4.0)
   - Support all changes to dclab.features (dclab 0.5.0)
 - Bugfixes:
   - Opening sessions containing paths to data with a hash "#" failed
   - AttributeError during autosave when no measurement data is available
   - Exporting to .fcs files failed due to NaN-valued events; Events
     containing NaN values are now ignored (fcswrite 0.1.3.dev22) (#215)
   - Improve displayed float values for selected configuration keys (#216)
   - Unicode error when searching for data sets on disk (#218)
   - Unicode error when performing LMM analysis on some setups (#217)
   - IndexError when obtaining meta data from previous, broken analysis
   - KeyError when starting a new analysis with unavailable plotting axes
   - Ignore broken .rtdc data files
0.8.5
 - Update plotting range when switching to log scale (#198)
 - Allow to fix plotting range to retain previous behavior (#198)
 - Initial plotting range is determined from min/max values of all plots (#213)
 - Improved standard contour and kde accuracies using Doane's formula (#147)
 - Bugfixes:
   - Support opening tdms files with capitalized "userDef" column names
     (dclab dclab 0.3.2.dev5) (#212)
   - Wx colors and chaco not compatible anymore (Windows appveyor build)
 - Refactoring:
   - Use pathlib when saving and opening sessions and do not use os.chdir
0.8.4
 - Add pixelation-corrected numerical and analytical isoelastics (#203)