@@ -4,6 +4,7 @@
      not chosen by the user
    - Add recording date/time tooltip in the analysis tab to avoid
      ambiguities (#223)
+ - fix: Allow arbitrary number of repetitions for mixed model analysis (#222)
  - Automated release to PyPI with appveyor
  - Begin migration of docs to sphinx/readthedocs.org
 0.8.6
